@@ -150,6 +150,10 @@ class ConfigManager
 			LOOT_MESSAGE_TYPE,
 			NAME_REPORT_TYPE,
 			HOUSE_CLEAN_OLD,
+			DEFAULT_DEPOT_SIZE_PREMIUM,
+			DEFAULT_DEPOT_SIZE,
+			VIPLIST_DEFAULT_LIMIT,
+			VIPLIST_DEFAULT_PREMIUM_LIMIT,
 			LAST_NUMBER_CONFIG /* this must be the last one */
 		};
 
